# haskell-profile-hot-path

./: Cargo.toml  flake.nix
src/: main.rs
