[package]
name = "haskell-profile-hot-path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = [ "serde_derive" ] }
serde_json = { version = "1.0.79", features = [ "unbounded_depth" ] }
anyhow = "1.0.55"
